Styles this project similarly to the previous version of this project.

--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary" text-center>
+  <ion-navbar text-center>
     <ion-title>Lobby</ion-title>
     
     <ion-buttons left>
@@ -21,6 +21,10 @@
       </button>
     </ion-buttons>
     
+  </ion-navbar>
+  
+  <ion-navbar>
+    <ion-title>Test</ion-title>
   </ion-navbar>
 
 </ion-header>
