makes progress on the subheader segment.

--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -23,8 +23,18 @@
     
   </ion-navbar>
   
-  <ion-navbar>
-    <ion-title>Test</ion-title>
+  <ion-navbar class="custom-segment" text-center>
+    <ion-title>
+      <span>
+        Drafts
+      </span>
+      <span>
+        Posts
+      </span>
+      <span>
+        Create
+      </span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
