Fixes the ch-easy-01 switch case challenge.

--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -31,7 +31,7 @@
       <span (click)="currentSegment = 'posts'">
         Posts
       </span>
-      <span (click)="currentSegment = 'craete'">
+      <span (click)="currentSegment = 'create'">
         Create
       </span>
     </ion-title>
