--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -44,17 +44,15 @@
   <span text-center [ngSwitch]="currentSegment">
     <span *ngSwitchCase="'drafts'">
       <h3>Drafts</h3>
-      <!-- Uncomment this ion-list and figure out why the ngFor is throwing an error -->
-      <!--<ion-list>-->
-      <!--  <ion-item *ngFor="draft of drafts">-->
-      <!--    {{draft | date: 'EEEE, MMMM d, y'}}-->
-      <!--  </ion-item>-->
-      <!--</ion-list>-->
+      <ion-list>
+        <ion-item *ngFor="let draft of drafts">
+          {{draft | date: 'EEEE, MMMM d, y'}}
+        </ion-item>
+      </ion-list>
     </span>
     
     <span *ngSwitchCase="'posts'">
       <h3>Posts</h3>
-      <!-- This works -->
       <ion-list>
         <ion-item *ngFor="let post of posts">
           {{post | date: 'EEEE, MMMM d, y'}}
