--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -54,7 +54,7 @@
     <span *ngSwitchCase="'posts'">
       <h3>Posts</h3>
       <ion-list>
-        <ion-item *ngFor="let post of posts" (click)="scheduleClicked()">
+        <ion-item *ngFor="let post of posts" (click)="scheduleClicked(post)">
           {{post | date: 'EEEE, MMMM d, y'}}
         </ion-item>
       </ion-list>
