Fixes ch-difficult-02 and updates the readme file to be more descriptive.

--- a/src/pages/schedule-view/schedule-view.html
+++ b/src/pages/schedule-view/schedule-view.html
@@ -6,13 +6,16 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar text-center>
     <ion-title>ScheduleView</ion-title>
+  </ion-navbar>
+  <ion-navbar text-center>
+    <ion-title>{{schedule | date: 'EEEE, MMMM d, y'}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <!--<h3></h3>-->
 </ion-content>
